changes in about section

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
               </p>
             </div>
           </div>
-          <div class="card mb-lg-5" style="max-width: 24rem">
+          <div class="card mb-lg-5 bd-bottom" style="max-width: 24rem">
             <div class="card-header text-light fs-3">
               <i class="fa-solid fa-address-card me-3"></i>About
             </div>
-            <div class="card-body">
+            <div class="card-body bd-bottom">
               <p class="card-text paragraph">
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
                 diam nonummy nibh euismod tincidunt ut laoreet dolore magna
